# cross-margin-engine

./: Cargo.toml  DESIGN.md  README.md
scenarios/: demo.jsonl
src/: engine.rs  events.rs  lib.rs  liquidation.rs  main.rs  margin.rs  risk.rs  snapshot.rs  state.rs  types.rs
