[package]
name = "cross-margin-engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic event-sourced cross-margin risk engine for perpetual futures"

[dependencies]
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
